fluxcd/apps/overlays/production/linkstack/statefulset-db-patch.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: linkstack-db
spec:
  replicas: 1
  template:
    spec:
      securityContext:
        runAsUser: 999
        runAsGroup: 999
        fsGroup: 999
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: mariadb
          image: docker.io/mariadb:12.3.2
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop:
                - ALL
          ports:
            - containerPort: 3306
              name: mysql
              protocol: TCP
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 1000m
              memory: 512Mi
          volumeMounts:
            - name: kokiri-forest-linkstack-mariadb
              mountPath: /var/lib/mysql
            - name: mysql-run
              mountPath: /run/mysqld
            - name: mysql-tmp
              mountPath: /tmp
      volumes:
        - name: mysql-run
          emptyDir: {}
        - name: mysql-tmp
          emptyDir: {}
  volumeClaimTemplates:
    - metadata:
        name: kokiri-forest-linkstack-mariadb
      spec:
        accessModes:
          - ReadWriteOnce
        storageClassName: ceph-rbd
        resources:
          requests:
            storage: 10Gi
