fluxcd/apps/overlays/production/linkstack/service-linkstack-ingress-patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: linkstack
  labels:
    policy.prplanit.com/ingress: "true"
