fluxcd/apps/overlays/production/linkstack/httproute-xylem.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: linkstack-xylem
  annotations:
    gatus.home-operations.com/endpoint: |
      group: "Personal Sites (Kokiri Forest🌿)"
      conditions:
        - "[STATUS] == any(200, 302)"
        - "[BODY] != pat(*Fairer Pages*)"
        - "[RESPONSE_TIME] < 5000"
spec:
  parentRefs:
    - name: phloem-gateway
      namespace: prelude-of-light
  hostnames:
    - "links.pcfae.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: linkstack
          port: 40323
